<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgActivity"
    tools:context=".MainActivity">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:src="@drawable/ic_app"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:textStyle="bold"
        android:textColor="@color/cyan900"
        android:textSize="@dimen/dimen_25sp"
        android:text="@string/seleccione_evento"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_Chef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:cardBackgroundColor="@color/cyan100"
            app:cardElevation="@dimen/dimen_5dp"
            app:cardCornerRadius="@dimen/dimen_5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dimen_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_chef"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:textSize="@dimen/dimen_30sp"
                    android:text="@string/chef_cocinero"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_musica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:cardBackgroundColor="@color/cyan100"
            app:cardElevation="@dimen/dimen_5dp"
            app:cardCornerRadius="@dimen/dimen_5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dimen_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_musica_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:textSize="@dimen/dimen_30sp"
                    android:text="@string/musica_dj"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>